--- a/style.css
+++ b/style.css
@@ -7,7 +7,17 @@ h1, .h1 {
   color: maroon;
   font-size: 24px;
 }
+ul li {
+  color: red;
+  background-color: aqua;
+}
 
+/*Quitar estilos al ul*/
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 5px 0;
+}
 h2, .h2 {
   font-family: Arial, Helvetica;
   color: green;
